improved data cleaning

--- a/college predictions.ipynb
+++ b/college predictions.ipynb
@@ -2,140 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       school  year  gender  hs_type  hs_state  gpa_w  gpa_uw  sat_m  sat_r  \\\n",
-      "3          45  2010       2        2         8   4.50    3.90  660.0  630.0   \n",
-      "19         45  2013       2        2         8   4.00    3.80  750.0  690.0   \n",
-      "22         45  2013       0        2         8   4.00    3.70  630.0  460.0   \n",
-      "47         45  2017       2        2         8   3.90    3.80  580.0  460.0   \n",
-      "59         45  2018       2        2         8   4.00    3.90  590.0  530.0   \n",
-      "73         45  2020       2        2         8   4.00    3.30  600.0  550.0   \n",
-      "121        40  2014       0        2        46   3.70    3.40  630.0  680.0   \n",
-      "133        40  2018       2        2        46   3.70    3.55  440.0  470.0   \n",
-      "134        40  2018       2        2         8   3.90    3.50  520.0  560.0   \n",
-      "136        40  2019       2        1        44   4.21    3.60  550.0  660.0   \n",
-      "143        71  2011       2        2         8   3.10    3.10  550.0  700.0   \n",
-      "147        71  2013       0        2         8   4.50    3.75  530.0  510.0   \n",
-      "148        71  2014       0        2         8   3.90    3.60  530.0  420.0   \n",
-      "151        71  2015       0        2         7   4.00    4.00  560.0  690.0   \n",
-      "152        71  2016       2        2        38   3.98    3.51  630.0  630.0   \n",
-      "174         7  2011       2        2         8   4.30    4.00  740.0  760.0   \n",
-      "184         7  2012       0        2        46   3.70    3.50  610.0  600.0   \n",
-      "193         7  2013       2        2        44   4.00    3.50  660.0  650.0   \n",
-      "196         7  2013       2        2         8   4.96    3.96  780.0  710.0   \n",
-      "210         7  2015       2        2        38   3.80    3.50  440.0  680.0   \n",
-      "228         7  2017       2        2        24   4.46    3.96  740.0  720.0   \n",
-      "231         7  2018       2        2        38   4.30    3.70  640.0  700.0   \n",
-      "237         7  2018       0        2        46   4.00    4.00  580.0  570.0   \n",
-      "238         7  2018       2        2        46   4.24    3.85  660.0  680.0   \n",
-      "267         1  2014       0        2        46   3.70    3.40  630.0  680.0   \n",
-      "268         1  2014       2        0        46   3.28    0.00  440.0  480.0   \n",
-      "273         1  2019       0        2        46   3.20    3.30  430.0  410.0   \n",
-      "284        77  2018       2        2        46   2.80    2.70  410.0  370.0   \n",
-      "291         5  2012       2        2        32   4.50    3.90  570.0  540.0   \n",
-      "323        34  2014       2        2        32   3.30    3.10  520.0  550.0   \n",
-      "...       ...   ...     ...      ...       ...    ...     ...    ...    ...   \n",
-      "12981      75  2017       2        2        14   4.15    3.72  720.0  750.0   \n",
-      "12989      75  2017       2        2        47   3.89    3.69  600.0  610.0   \n",
-      "13002      75  2018       0        2        14   4.05    3.83  680.0  640.0   \n",
-      "13004      75  2018       0        2        22   4.82    3.99  700.0  740.0   \n",
-      "13013      75  2018       2        2        14   4.71    3.93  680.0  690.0   \n",
-      "13025      75  2018       2        2        14   4.03    3.75  800.0  630.0   \n",
-      "13026      75  2018       2        2        32   4.16    3.80  600.0  780.0   \n",
-      "13027      75  2018       0        2        14   4.31    3.55  680.0  670.0   \n",
-      "13034      75  2018       0        2        47   3.43    3.20  600.0  550.0   \n",
-      "13041      75  2018       2        2        47   4.35    3.80  660.0  550.0   \n",
-      "13042      75  2018       0        2        44   4.67    4.00  680.0  670.0   \n",
-      "13044      75  2018       0        2        21   4.62    3.99  770.0  730.0   \n",
-      "13050      75  2018       0        2        14   4.20    4.00  630.0  550.0   \n",
-      "13062      75  2019       0        2        15   4.70    3.95  770.0  670.0   \n",
-      "13065      75  2019       2        2        39   4.00    4.00  740.0  790.0   \n",
-      "13067      75  2019       2        2        19   4.05    3.60  750.0  710.0   \n",
-      "13068      75  2019       2        2         8   4.30    3.70  720.0  670.0   \n",
-      "13070      75  2019       2        2        14   4.04    3.77  640.0  630.0   \n",
-      "13087      75  2019       0        2        14   4.40    3.80  700.0  680.0   \n",
-      "13096      75  2019       2        1        14   4.42    3.94  710.0  760.0   \n",
-      "13101      75  2019       2        2        32   4.30    4.00  450.0  490.0   \n",
-      "13102      75  2019       0        1        47   4.50    3.91  680.0  800.0   \n",
-      "13110      75  2019       2        2        46   4.89    3.56  550.0  620.0   \n",
-      "13119      75  2020       2        1        44   4.13    3.86  690.0  670.0   \n",
-      "13122      75  2020       0        2        47   4.60    3.83  800.0  740.0   \n",
-      "13133      75  2020       0        1        32   4.30    3.90  750.0  750.0   \n",
-      "13135      75  2020       0        2        14   4.13    3.97  630.0  630.0   \n",
-      "13143      75  2020       0        2        14   5.00    4.00  800.0  800.0   \n",
-      "13151      75  2020       0        2        47   4.01    3.78  700.0  580.0   \n",
-      "13154      75  2020       0        2        44   4.21    3.85  680.0  730.0   \n",
-      "\n",
-      "       sat_w   act  class_rank  status  eaed  legacy  athlete  \n",
-      "3      600.0  29.0    0.017544       4     0       0        0  \n",
-      "19     640.0  31.0    0.087912       4     0       0        0  \n",
-      "22     560.0  22.0    0.079295       4     0       0        0  \n",
-      "47     460.0  23.0    0.117647       4     0       0        0  \n",
-      "59     620.0  27.0    0.054545       4     0       0        0  \n",
-      "73     530.0  24.0    0.363934       4     0       0        0  \n",
-      "121    650.0  29.0    0.150685       4     0       0        0  \n",
-      "133    510.0  21.0    0.066667       4     0       0        0  \n",
-      "134    580.0  27.0    0.012931       4     0       0        0  \n",
-      "136    570.0  28.0    0.134752       4     0       0        0  \n",
-      "143    560.0  25.0    0.395349       4     0       0        0  \n",
-      "147    490.0  23.0    0.083969       4     0       1        1  \n",
-      "148    410.0  22.0    0.429688       4     0       0        0  \n",
-      "151    650.0  29.0    0.060000       4     0       0        0  \n",
-      "152    630.0  27.0    0.303333       1     0       0        0  \n",
-      "174    740.0  34.0    0.001715       4     0       0        0  \n",
-      "184    480.0  26.0    0.300000       4     0       0        0  \n",
-      "193    680.0  31.0    0.177326       4     0       0        1  \n",
-      "196    730.0  34.0    0.009524       4     0       0        0  \n",
-      "210    540.0  25.0    0.236607       4     1       0        0  \n",
-      "228    750.0  36.0    0.011472       4     0       0        0  \n",
-      "231    550.0  28.0    0.091429       4     0       0        0  \n",
-      "237    540.0  28.0    0.102740       1     0       0        0  \n",
-      "238    590.0  28.0    0.083333       4     0       0        0  \n",
-      "267    650.0  29.0    0.150685       4     0       0        0  \n",
-      "268    540.0  20.0    0.351351       2     0       0        0  \n",
-      "273    410.0  22.0    0.400756       4     0       0        0  \n",
-      "284    460.0  17.0    0.292308       1     0       0        1  \n",
-      "291    480.0  22.0    0.118421       4     0       0        0  \n",
-      "323    620.0  28.0    0.227273       4     1       0        0  \n",
-      "...      ...   ...         ...     ...   ...     ...      ...  \n",
-      "12981  700.0  33.0    0.096618       2     0       0        0  \n",
-      "12989  580.0  28.0    0.114286       0     1       1        0  \n",
-      "13002  640.0  29.0    0.218531       3     0       0        0  \n",
-      "13004  670.0  29.0    0.013605       4     0       0        0  \n",
-      "13013  800.0  30.0    0.021277       2     0       0        0  \n",
-      "13025  700.0  34.0    0.155814       2     0       0        0  \n",
-      "13026  720.0  31.0    0.156584       2     0       0        0  \n",
-      "13027  720.0  33.0    0.042838       3     0       0        0  \n",
-      "13034  590.0  24.0    0.293413       3     0       0        0  \n",
-      "13041  590.0  28.0    0.034884       2     1       0        0  \n",
-      "13042  680.0  31.0    0.007380       1     1       0        0  \n",
-      "13044  720.0  34.0    0.024390       4     1       0        0  \n",
-      "13050  690.0  28.0    0.078526       3     0       0        0  \n",
-      "13062  720.0  33.0    0.022581       4     0       0        0  \n",
-      "13065  780.0  36.0    0.012195       4     0       0        0  \n",
-      "13067  680.0  33.0    0.165000       1     1       0        0  \n",
-      "13068  650.0  30.0    0.041344       4     0       0        0  \n",
-      "13070  700.0  29.0    0.068493       3     1       0        0  \n",
-      "13087  620.0  30.0    0.083333       2     1       0        0  \n",
-      "13096  740.0  35.0    0.020408       4     1       0        0  \n",
-      "13101  460.0  20.0    0.037500       3     0       0        0  \n",
-      "13102  750.0  29.0    0.013333       4     0       0        0  \n",
-      "13110  610.0  27.0    0.019048       0     1       0        0  \n",
-      "13119  750.0  32.0    0.015385       4     0       0        0  \n",
-      "13122  730.0  34.0    0.008108       4     1       0        0  \n",
-      "13133  700.0  34.0    0.012121       1     0       1        0  \n",
-      "13135  590.0  30.0    0.073077       3     0       0        0  \n",
-      "13143  800.0  36.0    0.002000       4     1       0        0  \n",
-      "13151  800.0  31.0    0.047619       1     0       0        0  \n",
-      "13154  660.0  28.0    0.013158       4     1       0        0  \n",
-      "\n",
-      "[1783 rows x 16 columns]\n"
+      "{'Denied': 0, 'Accepted': 1}\n"
      ]
     }
    ],
@@ -143,6 +17,8 @@
     "import pandas as pd\n",
     "import sqlite3\n",
     "import re\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)\n",
+    "\n",
     "conn = sqlite3.connect(\"profiles.db\")\n",
     "\n",
     "def convert_class_rank(cr_str):\n",
@@ -152,15 +28,180 @@
     "def get_type_map(df_column):\n",
     "    return {t:i for i, t in enumerate(set(df_column))}\n",
     "\n",
+    "def convert_sat_to_act(sat):\n",
+    "    if sat >= 2380:\n",
+    "        return 36\n",
+    "    if sat < 2380 and sat >= 2290:\n",
+    "        return 35\n",
+    "    if sat < 2290 and sat >= 2220:\n",
+    "        return 34\n",
+    "    if sat < 2220 and sat >= 2140:\n",
+    "        return 33\n",
+    "    if sat < 2140 and sat >= 2080:\n",
+    "        return 32\n",
+    "    if sat < 2080 and sat >= 2020:\n",
+    "        return 31\n",
+    "    if sat < 2020 and sat >= 1980:\n",
+    "        return 30\n",
+    "    if sat < 1980 and sat >= 1920:\n",
+    "        return 29\n",
+    "    if sat < 1920 and sat >= 1860:\n",
+    "        return 28\n",
+    "    if sat < 1860 and sat >= 1800:\n",
+    "        return 27\n",
+    "    if sat < 1800 and sat >= 1740:\n",
+    "        return 26\n",
+    "    if sat < 1740 and sat >= 1680:\n",
+    "        return 25\n",
+    "    if sat < 1680 and sat >= 1620:\n",
+    "        return 24\n",
+    "    if sat < 1620 and sat >= 1560:\n",
+    "        return 23\n",
+    "    if sat < 1560 and sat >= 1510:\n",
+    "        return 22\n",
+    "    if sat < 1510 and sat >= 1450:\n",
+    "        return 21\n",
+    "    if sat < 1450 and sat >= 1390:\n",
+    "        return 20\n",
+    "    if sat < 1390 and sat >= 1330:\n",
+    "        return 19\n",
+    "    if sat < 1330 and sat >= 1270:\n",
+    "        return 18\n",
+    "    if sat < 1270 and sat >= 1210:\n",
+    "        return 17\n",
+    "    if sat < 1210 and sat >= 1140:\n",
+    "        return 16\n",
+    "    if sat < 1140 and sat >= 1060:\n",
+    "        return 15\n",
+    "    if sat < 1060 and sat >= 990:\n",
+    "        return 14\n",
+    "    if sat < 990:\n",
+    "        return 13\n",
+    "\n",
     "df = pd.read_sql_query(\"SELECT * FROM profiles\", conn)\n",
+    "df['sat_c'] = df['sat_m']+df['sat_r']+df['sat_w']\n",
+    "for col in ['sat_m', 'sat_r', 'sat_w']:\n",
+    "    df = df.drop(col, axis=1)\n",
+    "df['act'] = df.apply(lambda x: convert_sat_to_act(x['sat_c'] if pd.isnull(x['act']) else x['act']), axis=1)\n",
     "df = df.dropna()\n",
     "df = df[df.class_rank.str.match('\\d* (of) \\d*', na=False)]\n",
     "df['class_rank'] = df['class_rank'].apply(lambda x: convert_class_rank(x))\n",
     "replace_columns = ['hs_type', 'gender', 'status', 'hs_state', 'school']\n",
+    "df['status'].replace({'Deferred': 'Denied', 'Wait-Listed': 'Denied', 'Will Attend': 'Accepted'}, inplace=True)\n",
+    "print(get_type_map(df['status']))\n",
     "for col in replace_columns:\n",
-    "    df[col].replace(get_type_map(df[col]), inplace=True)\n",
-    "print(df)"
+    "    df[col].replace(get_type_map(df[col]), inplace=True)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X = df.drop('year', axis=1)\n",
+    "X = X.drop('status', axis=1)\n",
+    "X = X.drop('hs_type', axis=1)\n",
+    "X = X.drop('hs_state', axis=1)\n",
+    "X = X.drop('athlete', axis=1)\n",
+    "X = X.drop('sat_c', axis=1)\n",
+    "y = df['status']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train)\n",
+    "X_train = scaler.transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "mlp = MLPClassifier(hidden_layer_sizes=(11,11,11),max_iter=1000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MLPClassifier(activation='relu', alpha=0.0001, batch_size='auto', beta_1=0.9,\n",
+       "       beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
+       "       hidden_layer_sizes=(11, 11, 11), learning_rate='constant',\n",
+       "       learning_rate_init=0.001, max_iter=1000, momentum=0.9,\n",
+       "       n_iter_no_change=10, nesterovs_momentum=True, power_t=0.5,\n",
+       "       random_state=None, shuffle=True, solver='adam', tol=0.0001,\n",
+       "       validation_fraction=0.1, verbose=False, warm_start=False)"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlp.fit(X_train,y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = mlp.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[119 138]\n",
+      " [108 661]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.52      0.46      0.49       257\n",
+      "           1       0.83      0.86      0.84       769\n",
+      "\n",
+      "   micro avg       0.76      0.76      0.76      1026\n",
+      "   macro avg       0.68      0.66      0.67      1026\n",
+      "weighted avg       0.75      0.76      0.76      1026\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report,confusion_matrix\n",
+    "print(confusion_matrix(y_test,predictions))\n",
+    "print(classification_report(y_test,predictions))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
