--- a/college predictions.ipynb
+++ b/college predictions.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import sqlite3\n",
     "import re\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y)\n",
     "\n",
     "conn = sqlite3.connect(\"profiles.db\")\n",
     "\n",
@@ -92,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -100,67 +99,67 @@
      "output_type": "stream",
      "text": [
       "       school  gender  gpa_w  gpa_uw   act  class_rank  eaed  legacy\n",
-      "0          47       2   3.50    3.00  20.0    0.210753     0       0\n",
-      "3          49       2   4.50    3.90  13.0    0.017544     0       0\n",
-      "7          49       2   4.00    3.80  25.0    0.075231     0       0\n",
-      "9          49       2   3.90    3.60  31.0    0.149626     0       0\n",
-      "11         49       2   3.80    3.60  25.0    0.097059     0       0\n",
-      "15         49       2   4.00    4.00  32.0    0.009259     0       0\n",
-      "17         49       2   3.89    3.47  24.0    0.145251     1       0\n",
-      "19         49       2   4.00    3.80  13.0    0.087912     0       0\n",
-      "21         49       2   3.90    3.90  26.0    0.055556     1       0\n",
-      "22         49       0   4.00    3.70  13.0    0.079295     0       0\n",
-      "23         49       2   3.06    2.65  24.0    0.093023     1       0\n",
-      "24         49       0   3.30    3.20  26.0    0.383966     1       0\n",
-      "26         49       0   3.70    3.60  26.0    0.164948     0       0\n",
-      "30         49       0   3.85    3.75  26.0    0.131012     0       0\n",
-      "34         49       2   3.80    3.70  24.0    0.100000     0       0\n",
-      "47         49       2   3.90    3.80  13.0    0.117647     0       0\n",
-      "52         49       2   3.80    3.60  23.0    0.032086     0       0\n",
-      "53         49       2   4.14    3.67  27.0    0.084956     0       0\n",
-      "55         49       2   3.80    3.50  27.0    0.330000     0       0\n",
-      "56         49       2   3.70    3.70  23.0    0.321739     0       0\n",
-      "57         49       2   4.00    4.00  29.0    0.016568     0       0\n",
-      "59         49       2   4.00    3.90  13.0    0.054545     0       0\n",
-      "63         49       2   3.80    3.40  28.0    0.311111     1       0\n",
-      "65         49       0   3.40    3.20  25.0    0.435115     1       0\n",
-      "70         49       2   3.80    3.80  25.0    0.785714     1       0\n",
-      "73         49       2   4.00    3.30  13.0    0.363934     0       0\n",
-      "78         52       2   4.00    3.80  25.0    0.075231     0       0\n",
-      "82         52       2   5.00    3.40  24.0    0.035556     1       0\n",
-      "83         52       2   2.77    2.60  32.0    0.369458     0       0\n",
-      "102        43       2   5.00    4.00  23.0    0.094595     0       0\n",
+      "0          49       1   3.50    3.00  20.0    0.210753     0       0\n",
+      "3         109       1   4.50    3.90  13.0    0.017544     0       0\n",
+      "7         109       1   4.00    3.80  25.0    0.075231     0       0\n",
+      "9         109       1   3.90    3.60  31.0    0.149626     0       0\n",
+      "11        109       1   3.80    3.60  25.0    0.097059     0       0\n",
+      "15        109       1   4.00    4.00  32.0    0.009259     0       0\n",
+      "17        109       1   3.89    3.47  24.0    0.145251     1       0\n",
+      "19        109       1   4.00    3.80  13.0    0.087912     0       0\n",
+      "21        109       1   3.90    3.90  26.0    0.055556     1       0\n",
+      "22        109       0   4.00    3.70  13.0    0.079295     0       0\n",
+      "23        109       1   3.06    2.65  24.0    0.093023     1       0\n",
+      "24        109       0   3.30    3.20  26.0    0.383966     1       0\n",
+      "26        109       0   3.70    3.60  26.0    0.164948     0       0\n",
+      "30        109       0   3.85    3.75  26.0    0.131012     0       0\n",
+      "34        109       1   3.80    3.70  24.0    0.100000     0       0\n",
+      "47        109       1   3.90    3.80  13.0    0.117647     0       0\n",
+      "52        109       1   3.80    3.60  23.0    0.032086     0       0\n",
+      "53        109       1   4.14    3.67  27.0    0.084956     0       0\n",
+      "55        109       1   3.80    3.50  27.0    0.330000     0       0\n",
+      "56        109       1   3.70    3.70  23.0    0.321739     0       0\n",
+      "57        109       1   4.00    4.00  29.0    0.016568     0       0\n",
+      "59        109       1   4.00    3.90  13.0    0.054545     0       0\n",
+      "63        109       1   3.80    3.40  28.0    0.311111     1       0\n",
+      "65        109       0   3.40    3.20  25.0    0.435115     1       0\n",
+      "70        109       1   3.80    3.80  25.0    0.785714     1       0\n",
+      "73        109       1   4.00    3.30  13.0    0.363934     0       0\n",
+      "78        104       1   4.00    3.80  25.0    0.075231     0       0\n",
+      "82        104       1   5.00    3.40  24.0    0.035556     1       0\n",
+      "83        104       1   2.77    2.60  32.0    0.369458     0       0\n",
+      "102       106       1   5.00    4.00  23.0    0.094595     0       0\n",
       "...       ...     ...    ...     ...   ...         ...   ...     ...\n",
-      "13042      82       0   4.67    4.00  13.0    0.007380     1       0\n",
-      "13044      82       0   4.62    3.99  13.0    0.024390     1       0\n",
-      "13045      82       2   3.94    3.45  30.0    0.434251     0       0\n",
-      "13050      82       0   4.20    4.00  13.0    0.078526     0       0\n",
-      "13059      82       2   3.98    3.98  28.0    0.025000     0       0\n",
-      "13062      82       0   4.70    3.95  13.0    0.022581     0       0\n",
-      "13065      82       2   4.00    4.00  13.0    0.012195     0       0\n",
-      "13067      82       2   4.05    3.60  13.0    0.165000     1       0\n",
-      "13068      82       2   4.30    3.70  13.0    0.041344     0       0\n",
-      "13070      82       2   4.04    3.77  13.0    0.068493     1       0\n",
-      "13085      82       2   4.67    3.88  28.0    0.048828     0       0\n",
-      "13087      82       0   4.40    3.80  13.0    0.083333     1       0\n",
-      "13096      82       2   4.42    3.94  13.0    0.020408     1       0\n",
-      "13101      82       2   4.30    4.00  13.0    0.037500     0       0\n",
-      "13102      82       0   4.50    3.91  13.0    0.013333     0       0\n",
-      "13110      82       2   4.89    3.56  13.0    0.019048     1       0\n",
-      "13118      82       2   4.65    4.00  31.0    0.060870     1       0\n",
-      "13119      82       2   4.13    3.86  13.0    0.015385     0       0\n",
-      "13122      82       0   4.60    3.83  13.0    0.008108     1       0\n",
-      "13128      82       2   4.10    4.00  29.0    0.023622     1       0\n",
-      "13131      82       0   4.00    3.70  32.0    0.060000     1       0\n",
-      "13132      82       0   4.50    3.60  31.0    0.037109     0       0\n",
-      "13133      82       0   4.30    3.90  13.0    0.012121     0       1\n",
-      "13135      82       0   4.13    3.97  13.0    0.073077     0       0\n",
-      "13139      82       2   3.73    3.53  27.0    0.121212     0       0\n",
-      "13142      82       0   3.81    3.62  33.0    0.245455     0       0\n",
-      "13143      82       0   5.00    4.00  13.0    0.002000     1       0\n",
-      "13151      82       0   4.01    3.78  13.0    0.047619     0       0\n",
-      "13154      82       0   4.21    3.85  13.0    0.013158     1       0\n",
-      "13160      82       2   4.10    3.70  32.0    0.030612     0       0\n",
+      "13042      51       0   4.67    4.00  13.0    0.007380     1       0\n",
+      "13044      51       0   4.62    3.99  13.0    0.024390     1       0\n",
+      "13045      51       1   3.94    3.45  30.0    0.434251     0       0\n",
+      "13050      51       0   4.20    4.00  13.0    0.078526     0       0\n",
+      "13059      51       1   3.98    3.98  28.0    0.025000     0       0\n",
+      "13062      51       0   4.70    3.95  13.0    0.022581     0       0\n",
+      "13065      51       1   4.00    4.00  13.0    0.012195     0       0\n",
+      "13067      51       1   4.05    3.60  13.0    0.165000     1       0\n",
+      "13068      51       1   4.30    3.70  13.0    0.041344     0       0\n",
+      "13070      51       1   4.04    3.77  13.0    0.068493     1       0\n",
+      "13085      51       1   4.67    3.88  28.0    0.048828     0       0\n",
+      "13087      51       0   4.40    3.80  13.0    0.083333     1       0\n",
+      "13096      51       1   4.42    3.94  13.0    0.020408     1       0\n",
+      "13101      51       1   4.30    4.00  13.0    0.037500     0       0\n",
+      "13102      51       0   4.50    3.91  13.0    0.013333     0       0\n",
+      "13110      51       1   4.89    3.56  13.0    0.019048     1       0\n",
+      "13118      51       1   4.65    4.00  31.0    0.060870     1       0\n",
+      "13119      51       1   4.13    3.86  13.0    0.015385     0       0\n",
+      "13122      51       0   4.60    3.83  13.0    0.008108     1       0\n",
+      "13128      51       1   4.10    4.00  29.0    0.023622     1       0\n",
+      "13131      51       0   4.00    3.70  32.0    0.060000     1       0\n",
+      "13132      51       0   4.50    3.60  31.0    0.037109     0       0\n",
+      "13133      51       0   4.30    3.90  13.0    0.012121     0       1\n",
+      "13135      51       0   4.13    3.97  13.0    0.073077     0       0\n",
+      "13139      51       1   3.73    3.53  27.0    0.121212     0       0\n",
+      "13142      51       0   3.81    3.62  33.0    0.245455     0       0\n",
+      "13143      51       0   5.00    4.00  13.0    0.002000     1       0\n",
+      "13151      51       0   4.01    3.78  13.0    0.047619     0       0\n",
+      "13154      51       0   4.21    3.85  13.0    0.013158     1       0\n",
+      "13160      51       1   4.10    3.70  32.0    0.030612     0       0\n",
       "\n",
       "[4101 rows x 8 columns]\n"
      ]
@@ -182,18 +181,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\peaka\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\sklearn\\preprocessing\\data.py:617: DataConversionWarning: Data with input dtype int64, float64 were all converted to float64 by StandardScaler.\n",
+      "/usr/local/lib/python3.6/dist-packages/sklearn/preprocessing/data.py:617: DataConversionWarning: Data with input dtype int64, float64 were all converted to float64 by StandardScaler.\n",
       "  return self.partial_fit(X, y)\n",
-      "c:\\users\\peaka\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\ipykernel_launcher.py:4: DataConversionWarning: Data with input dtype int64, float64 were all converted to float64 by StandardScaler.\n",
+      "/home/marclane/.local/lib/python3.6/site-packages/ipykernel_launcher.py:4: DataConversionWarning: Data with input dtype int64, float64 were all converted to float64 by StandardScaler.\n",
       "  after removing the cwd from sys.path.\n",
-      "c:\\users\\peaka\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\ipykernel_launcher.py:5: DataConversionWarning: Data with input dtype int64, float64 were all converted to float64 by StandardScaler.\n",
+      "/home/marclane/.local/lib/python3.6/site-packages/ipykernel_launcher.py:5: DataConversionWarning: Data with input dtype int64, float64 were all converted to float64 by StandardScaler.\n",
       "  \"\"\"\n"
      ]
     }
@@ -208,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +232,7 @@
        "       validation_fraction=0.1, verbose=False, warm_start=False)"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,23 +252,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 72 209]\n",
-      " [ 65 680]]\n",
+      "[[747  29]\n",
+      " [215  35]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.53      0.26      0.34       281\n",
-      "           1       0.76      0.91      0.83       745\n",
+      "           0       0.78      0.96      0.86       776\n",
+      "           1       0.55      0.14      0.22       250\n",
       "\n",
-      "   micro avg       0.73      0.73      0.73      1026\n",
-      "   macro avg       0.65      0.58      0.59      1026\n",
-      "weighted avg       0.70      0.73      0.70      1026\n",
+      "   micro avg       0.76      0.76      0.76      1026\n",
+      "   macro avg       0.66      0.55      0.54      1026\n",
+      "weighted avg       0.72      0.76      0.70      1026\n",
       "\n"
      ]
     }
@@ -282,21 +281,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7261208576998051\n"
+      "0.7563352826510721\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\peaka\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
       "  FutureWarning)\n"
      ]
     }
@@ -329,18 +328,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.0"
   }
  },
  "nbformat": 4,
