--- a/BalancedPredictionsClusterStudents.ipynb
+++ b/BalancedPredictionsClusterStudents.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7faabbc80ea0>"
+       "<sqlite3.Cursor at 0x7f22652512d0>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,16 +30,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_sql_query(\"SELECT * FROM colleges.university_profiles AS c JOIN profiles AS p ON c.school = p.school\",conn)"
+    "df = pd.read_sql_query(\"SELECT * FROM colleges.university_profiles AS c JOIN profiles AS p ON c.school = p.school\",conn)\n",
+    "max_index = len(df.index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +115,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setting up points\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "df = df.loc[:,~df.columns.duplicated()]\n",
     "df.fillna(value=pd.np.nan, inplace=True)\n",
@@ -146,31 +156,34 @@
     "    isValid = False\n",
     "    while(not isValid):\n",
     "        try:\n",
-    "            dfc['avg_test_score'][index]\n",
+    "            dfc['class_rank'][index]\n",
     "            return index, j+1\n",
     "        except:\n",
     "            index += 1\n",
-    "            \n",
+    "\n",
+    "print(\"Setting up points\")\n",
     "points = []\n",
     "i = 0\n",
     "j=0\n",
-    "while i < len(dfc.index):\n",
+    "while i < 97686:\n",
     "    i, j = getNextTableIndex(i,j)\n",
     "    point = []\n",
     "    for col in dfc.columns.values:\n",
     "        point.append(dfc[col].get(i))\n",
     "    points.append(point)\n",
     "    i += 1\n",
+    "print(\"Done\")\n",
     "        \n",
-    "cluster = KMeans(n_clusters=10, max_iter=500).fit(points)\n",
+    "cluster = KMeans(n_clusters=1000, max_iter=500).fit(points)\n",
     "\n",
+    "print(\"Assigning clusters\")\n",
     "i = 0\n",
     "j = 0\n",
-    "while i < len(dfc.index):\n",
+    "while i < 97686:\n",
     "    label = cluster.labels_[j]\n",
     "    i, j = getNextTableIndex(i,j)\n",
     "    for c,col in enumerate(dfc.columns.values):\n",
-    "        df.set_value(i, col, cluster.cluster_centers_[label][c])\n",
+    "        dfc.set_value(i, col, cluster.cluster_centers_[label][c])\n",
     "    i += 1\n",
     "\n"
    ]
